# Color

./: CMakeLists.txt  Color.cpp  Color.hpp  Color.mk  LICENSE  README  README.md
include/: Color.hpp  color.h
src/: ColorHSL.cpp  ColorHSV.cpp  ColorRGB.cpp  ColorRGBc.cpp
test/: convert_to_hsl.cpp  convert_to_hsv.cpp  convert_to_rgb.cpp  hsl.cpp  hsv.cpp  rgb.cpp
